# bluerov2_data_collection_ws

./: README.md
data/: .gitignore
scripts/: ROV_startup_and_record_data_on_topside_PC.bash  build_ROV.bash  build_topside_PC.bash  data_playback.bash  start_DVL.exp  start_ROV_cam_stream.bash  stop_DVL.exp
src/apos_interfaces/: CMakeLists.txt  package.xml
src/apos_interfaces/msg/: NED.msg  Sensor.msg  Transponder.msg  Vessel.msg
src/apos_interfaces/srv/: SetNedToCurrentPos.srv  SetNedToPos.srv
src/bluerov2_pid/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml
src/bluerov2_pid/include/bluerov2_pid/: bluerov2_pid.hpp  bluerov2_pid_node.hpp  math_tools.hpp
src/bluerov2_pid/launch/: hysteretic_controller.launch.py
src/bluerov2_pid/params/: params.yaml  shitpid_params.yaml
src/bluerov2_pid/src/: bluerov2_pid.cpp  bluerov2_pid_node.cpp  bluerov2_pid_node_main.cpp
src/bluerov2_teleop/: CMakeLists.txt  Dockerfile  docker-compose.yml  package.xml
src/bluerov2_teleop/.devcontainer/: devcontainer.json  docker-compose.yml
src/bluerov2_teleop/include/bluerov2_teleop/: bluerov2_teleop_node.hpp
src/bluerov2_teleop/launch/: launch_teleop.launch.py
src/bluerov2_teleop/params/: params.yaml
src/bluerov2_teleop/src/: bluerov2_teleop_node.cpp  bluerov2_teleop_node_main.cpp
src/bluerov_actuator_driver/: CMakeLists.txt  README.md  package.xml
src/bluerov_actuator_driver/include/bluerov_actuator_driver/: Constants.h  PCA9685.h  bluerov_actuator_driver.hpp  bluerov_actuator_driver_node.hpp  pixhawk.hpp  visibility_control.hpp
src/bluerov_actuator_driver/launch/: actuator_driver.launch.py
src/bluerov_actuator_driver/params/: params.yaml
src/bluerov_actuator_driver/src/: PCA9685.cpp  bluerov_actuator_driver.cpp  bluerov_actuator_driver_node.cpp  bluerov_actuator_driver_node_main.cpp  pixhawk.cpp
src/bluerov_interfaces/: CMakeLists.txt
src/bluerov_interfaces/msg/: CameraTilt.msg  ControlActions.msg  ControllerState.msg  DVL.msg  EstimatorState.msg  ILOS.msg  LightBrightness.msg  NucleusAHRS.msg  SetpointReference.msg  SnakeActuatorInput.msg  ThrusterPWM.msg
src/brov2_sonar/: LICENSE  README.md
src/brov2_sonar/include/brov2_sonar/: DSSPParser.hpp  DVSFileWriter.hpp  EthernetSonarAPI.hpp
src/brov2_sonar/src/: DSSPParser.cpp  DVSFileWriter.cpp  EthernetSonarAPI.cpp
src/sentireader_ros2/: CMakeLists.txt  Cargo.toml  package.xml
src/sentireader_ros2/sentireader_rust/coning_and_sculling/: Cargo.toml
src/sentireader_ros2/sentireader_rust/coning_and_sculling/src/: coning_and_sculling.rs  lib.rs
src/sentireader_ros2/sentireader_rust/src/: sentireader.rs
src/sentireader_ros2/src/: main.rs
