<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluerov2_pid</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="erlendbasso@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>realtime_tools</depend> -->
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pendulum_utils</depend>
  <depend>manif</depend>
  <depend>rcpputils</depend>
  <depend>sophus</depend>
  <!-- <depend>cse_actuator_driver</depend> -->
  <depend>bluerov_interfaces</depend>

  <!-- <exec_depend>cse_actuator_driver</exec_depend> -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
