[package]
name = "sentireader_ros2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2r = "0.9.5"
r2r_msg_gen = "0.9.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
nalgebra = { version = "0.32", default-features = false, features = [ "libm" ] }
# nalgebra = "0.32"
utm = "0.1.6"
sentireader_rust = {path = "sentireader_rust"}
coning_and_sculling = {path = "sentireader_rust/coning_and_sculling"}
