<package format="3">
  <name>sentireader_ros2</name>
  <version>0.1.0</version>
  <description>SentiSystems Reader PCB interface Rust-to-ROS2 bridge node via r2r</description>
  <maintainer email="karate.martynas1@gmail.com">Martynas Smilingis</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
